# kernelcraft

./: .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
notes/: learning_log.md
shared/: __init__.py  benchmark_utils.py  correctness_utils.py
