[tool.poetry]
name = "kernelcraft"
version = "0.1.0"
description = "Personal repository of Triton GPU kernel implementations, benchmarks, and writeups."
authors = ["Jared Childers <absorbdmg@protonmail.com>"]
readme = "README.md"
packages = [{include = "shared"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.0"
triton = "^3.0.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.0"
black = "^24.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
